--- a/sobre.html
+++ b/sobre.html
@@ -11,9 +11,17 @@
         <div><ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./sobre.html">Sobre</a></li>
-            <li><a href="./contato.html">Contatos</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="./saibamais.html">Saiba Mais</a></li>
           </ul></div>
+          <h2>SOBRE NOSSO TIME</h2>
+           <div id="sobre"></div> 
+               <img src="Carol.PNG" alt=""> 
+               <p>Caroline Costa<p>
+            <p>Planejamento Operação<p>
+           </p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente.</p>
+           <h3>LINKEDIN:</h3>
+           https://www.linkedin.com/in/caroline-costa-2114a284/
         </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
