update de sobre

--- a/sobre.html
+++ b/sobre.html
@@ -22,6 +22,13 @@
            </p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente.</p>
            <h3>LINKEDIN:</h3>
            https://www.linkedin.com/in/caroline-costa-2114a284/
+        <hr>
+           <img id="carol" src="./Carol.PNG" >
+            <h2>Caroline Costa</h2>
+            <p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p> 
+            <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
+            <hr>
+
         </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
