--- a/sobre.html
+++ b/sobre.html
@@ -19,9 +19,15 @@
                <img src="Carol.PNG" alt=""> 
                <p>Caroline Costa<p>
             <p>Planejamento Operação<p>
-           </p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente.</p>
+           </p>Formada em administração de empresas, analista de planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente.</p>
            <h3>LINKEDIN:</h3>
            https://www.linkedin.com/in/caroline-costa-2114a284/
+           <img src="Felipe.jpeg" alt="">
+           <p>Felipe Lima<p>
+           <p>Assistente TI
+            Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p>
+            <h3>LINKEDIN:</h3>
+            https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/
         </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
