--- a/sobre.html
+++ b/sobre.html
@@ -22,12 +22,12 @@
             <p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p> 
             <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
             <hr>
-            <img src="Felipe.jpeg" alt="">
+            <img id="felipe" src="Felipe.jpeg" alt="">
             <h2>Felipe Lima</h2>
             <p>Assistente TI
              Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p>
              <p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p>
-             <img src="Patrick.jpg" alt="">
+             <img id="patrick" src="Patrick.jpg" alt="">
              <h2>Patrick Gaspar</h2>
              <p>Analista de Operações Consignado
                 Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p>
