--- a/sobre.html
+++ b/sobre.html
@@ -15,23 +15,22 @@
             <li><a href="./saibamais.html">Saiba Mais</a></li>
           </ul></div>
           <h2>SOBRE NOSSO TIME</h2>
-           <div id="sobre"></div> 
-            <hr>
            <img id="carol" src="./Carol.PNG" >
             <h2>Caroline Costa</h2>
-            <p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p> 
+            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
             <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
-            <hr>
+            <hr> 
             <img id="felipe" src="Felipe.jpeg" alt="">
             <h2>Felipe Lima</h2>
-            <p>Assistente TI
-             Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p>
+            <div id="sobre"><p>Assistente TI
+             Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p></div>
              <p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p>
+             <hr>
              <img id="patrick" src="Patrick.jpg" alt="">
              <h2>Patrick Gaspar</h2>
-             <p>Analista de Operações Consignado
-                Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p>
-                <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p>
+             <div id="sobre"><p>Analista de Operações Consignado
+                Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></div>
+                <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></p></body></html>
         </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
