--- a/contato.html
+++ b/contato.html
@@ -1,3 +1,8 @@
+-<html>
+    <head>
+        <title>.:Gama Grupo 3:.</title>
+        <link rel="stylesheet" href="./estilo.css"/>
+    </head>
 <DOCTYPE HTML>
 <html lang="pt-br">
       <head>
@@ -7,7 +12,9 @@
       </head>
     <body>
 
-      <div class="card">
+        <div id="conteudo">
+   
+            <div class="card">
             <h2>Contato</h2>
             <div class="row">
               <div class="col">
@@ -49,7 +56,7 @@
                 <input type="submit" value="Enviar">
               </div>
             </div>
-       </div>
-
+        </div>
+        
     </body>    
 </html>
