--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
+            <p> @ Grupo 3 - Itau/Gama Academy</p>
 
         </div>
 
