--- a/saibamais.html
+++ b/saibamais.html
@@ -19,6 +19,7 @@
 </div>
 <div id="rodape">
     <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
+    <p> @ Grupo 3 - Itau/Gama Academy</p>
 
 </div>
     </body>
