--- a/sobre.html
+++ b/sobre.html
@@ -34,6 +34,7 @@
         </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
+            <p> @ Grupo 3 - Itau/Gama Academy</p>
 
         </div>
     </body>
