--- a/sobre.html
+++ b/sobre.html
@@ -26,12 +26,19 @@
              Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p></div>
              <p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p>
              <hr>
+             <img id="flavio" src="./Imagens/Flavio.jpeg" alt="">
+                <h2>Flávio Judice</h2>
+                <div id="sobre"><p>Analista Gestão Portfólio Junior
+                    Formado em Ciências da Computação, atuando como analista na criação de bases para gestão de horas dos portfólios de tecnologia do banco Itaú.</p></div>
+                   <p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p></body></html>
              <img id="patrick" src="./Imagens/Patrick.jpg" alt="">
              <h2>Patrick Gaspar</h2>
              <div id="sobre"><p>Analista de Operações Consignado
                 Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></div>
                 <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></p></body></html>
-        </div>
+                <hr>
+                
+            </div>
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
             <p> @ Grupo 3 - Itau/Gama Academy</p>
