estilo no contato.html

--- a/contato.html
+++ b/contato.html
@@ -2,19 +2,23 @@
 <html lang="pt-br">
       <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="Contato.css">
+        <link rel="stylesheet" type="text/css" href="estilo.css">
         <title>Contato</title>
       </head>
     <body>
          
-           <div id="navbar">
-             <ul>
-              <div> <a href="./index.html"> Home</a> </div>
-              <div> <a href="./sobre.html"> Sobre</a> </div>
-              <div> <a href="./contato.html"> Contatos</a> </div>
-              <div> <a href="./saibamais.html"> Saiba Mais</a> </div>
-             </ul> 
-           </div>
+      <div id="cabecalho">
+        <h1>Home Grupo 3</h1> <!--Título da página-->
+    </div>
+    <div id="conteudo">
+    <div id="navbar">
+        <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./sobre.html">Sobre</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+        <li><a href="./saibamais.html">Saiba Mais</a></li>
+        </ul>
+    </div>
     
       <div id="conteudo">
    
