--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,8 @@
           <h2>SOBRE NOSSO TIME</h2>
            <img id="carol" src="./Imagens/Carol.PNG" >
             <h2>Caroline Costa</h2>
-            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
+            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú,
+                 busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
             <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
             <hr> 
             <img id="felipe" src="./Imagens/Felipe.jpeg" alt="">
@@ -30,12 +31,13 @@
                 <h2>Flávio Judice</h2>
                 <div id="sobre"><p>Analista Gestão Portfólio Junior
                     Formado em Ciências da Computação, atuando como analista na criação de bases para gestão de horas dos portfólios de tecnologia do banco Itaú.</p></div>
-                   <p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p></body></html>
-             <img id="patrick" src="./Imagens/Patrick.jpg" alt="">
+                   <p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p>
+            <hr>
+                   <img id="patrick" src="./Imagens/Patrick.jpg" alt="">
              <h2>Patrick Gaspar</h2>
              <div id="sobre"><p>Analista de Operações Consignado
                 Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></div>
-                <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></p></body></html>
+                <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></p>
                 <hr>
                 
             </div>
