pagina de Sabia Mais OK

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
 
         <div>
-            <div id="T1"><h2>Venceremos a Covid-19</h2>
-            <p>A pandemia de Covid-19,vem produzindo repercussões da saúde em escala global, mas também repercussões e impactos sociais, econômicos, políticos, culturais e históricos sem precedentes na história recente, causando milhares mortes no mundo, mas estamos caminhando ao normalização. Aqui vamos mostrar as noticias que sinalizaram a recuperação</p>
+            <div id="T1"><h1>Venceremos a Covid-19</h1>
+            <p>A pandemia de Covid-19, vem produzindo repercussões da saúde em escala global, mas também repercussões e impactos sociais, econômicos, políticos, culturais e históricos sem precedentes na história recente, causando milhares mortes no mundo, mas estamos caminhando ao normalização. Aqui vamos mostrar as noticias que sinalizaram a recuperação</p>
         </div></div>
         <hr>
         
@@ -65,8 +65,8 @@
 
             <img id="fotonoticia" src="./Imagens/Noticia6.jpg" >
             <h2>O Instituto Butantan concluiu o desenvolvimento do processo de produção de um soro contra o Sars-CoV-2</h2>
-            <p>O Instituto Butantan concluiu o desenvolvimento do processo de produção de um soro contra o Sars-CoV-2, o vírus causador da Covid-19. Mais de 2 mil frascos estão prontos para o início dos testes de segurança e eficácia em pessoas, informou a bioquímica Ana Marisa Chudzinski-Tavassi, diretora de Inovação do instituto. Resultado de cinco meses de trabalho, o soro é feito a partir de vírus inativado por radiação aplicado em cavalos. Em resposta ao vírus, os animais produzem anticorpos do tipo imunoglobulina G (IgG), que são depois extraídos do sangue e purificados. Segundo Chudzinski-Tavassi, o soro mostrou resultados satisfatórios em testes de neutralização em células e segurança em camundongos e coelhos. O Butantan busca agora autorização da Agência Nacional de Vigilância Sanitária (Anvisa) para os testes de segurança e eficácia em pessoas. Se apresentar a eficácia esperada na próxima etapa de testes, o soro poderá ser usado para tratar pessoas que apresentem os primeiros sintomas da doença, para bloquear o avanço da infecção, segundo a pesquisadora. “O soro poderá ajudar bastante, já que ainda não temos antivirais eficazes contra o vírus causador da Covid-19”, disse Chudzinski-Tavassi.".</p> 
-            <p style="text-align:center;"></p><b><a href="https://revistapesquisa.fapesp.br/butantan-desenvolve-soro-contra-o-novo-coronavirus/" target="_blank">SABIA MAIS</a></b></p>
+            <p>O vírus causador da Covid-19. Mais de 2 mil frascos estão prontos para o início dos testes de segurança e eficácia em pessoas, informou a bioquímica Ana Marisa Chudzinski-Tavassi, diretora de Inovação do instituto. Resultado de cinco meses de trabalho, o soro é feito a partir de vírus inativado por radiação aplicado em cavalos. Em resposta ao vírus, os animais produzem anticorpos do tipo imunoglobulina G (IgG), que são depois extraídos do sangue e purificados.</p> 
+            <p><b><a href="https://revistapesquisa.fapesp.br/butantan-desenvolve-soro-contra-o-novo-coronavirus/" target="_blank">SABIA MAIS</a></b></p>
             <hr>
         </div>
         </div>
