--- a/sobre.html
+++ b/sobre.html
@@ -17,8 +17,7 @@
           <h2>SOBRE NOSSO TIME</h2>
            <img id="carol" src="./Imagens/Carol.PNG" >
             <h2>Caroline Costa</h2>
-            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú,
-                 busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
+            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
             <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
             <hr> 
             <img id="felipe" src="./Imagens/Felipe.jpeg" alt="">
