--- a/sobre.html
+++ b/sobre.html
@@ -19,32 +19,44 @@
           
           <h2>SOBRE NOSSO TIME</h2>
           
-          <div id="sobrecoluna">
-           <img id="carol" src="./Imagens/Carol.PNG" >
-            <h2>Caroline Costa</h2>
-            <div id="sobre"><p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p></div>
-            <p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p>
-            <hr> 
-            <img id="felipe" src="./Imagens/Felipe.jpeg" alt="">
-            <h2>Felipe Lima</h2>
-            <div id="sobre"><p>Assistente TI
-             Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p></div>
-             <p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p>
-             <hr>
-             <img id="flavio" src="./Imagens/Flavio.jpeg" alt="">
-                <h2>Flávio Judice</h2>
-                <div id="sobre"><p>Analista Gestão Portfólio Junior
-                    Formado em Ciências da Computação, atuando como analista na criação de bases para gestão de horas dos portfólios de tecnologia do banco Itaú.</p></div>
-                   <p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p>
-            <hr>
-                   <img id="patrick" src="./Imagens/Patrick.jpg" alt="">
-             <h2>Patrick Gaspar</h2>
-             <div id="sobre"><p>Analista de Operações Consignado
-                Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></div>
-                <p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p>
-                <hr>
-                </div>
-            </div>
+          <table id="quemsomos">
+            <tr>
+              <th><img id="carol" src="./Imagens/Carol.PNG" ></th>
+              <th><img id="felipe" src="./Imagens/Felipe.jpeg" alt=""></th>
+            </tr>
+              <td><h2>Caroline Costa</h2></td>
+              <td><h2>Felipe Lima</h2></td>
+            <tr>
+              <td><p>Formada em administração de empresas, analista planejamento operação no Itaú, busco para melhorar o atendimento ágil e satisfação do cliente</p></td>
+              <td><p>Assistente TI
+                Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p></td>
+            </tr>
+            <tr>
+              <td><p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p></td>
+              <td><p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p></td>
+            </tr>
+            <td>-</td>
+            <td>-</td>
+            <tr>
+              <th><img id="flavio" src="./Imagens/Flavio.jpeg" alt=""></th>
+              <th><img id="patrick" src="./Imagens/Patrick.jpg" alt=""></th>
+            </tr>
+            <td><h2>Flavio Judice</h2></td>
+            <td><h2>Patrick Gaspar</h2></td>
+            <tr>
+              <td><p>Analista Gestão Portfólio Junior
+                Formado em Ciências da Computação, atuando como analista na criação de bases para gestão de horas dos portfólios de tecnologia do banco Itaú.</p></td>
+              <td><p>Analista de Operações Consignado
+                Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></td>
+            </tr>
+            <tr>
+              <td><p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p></td>
+              <td><p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></td>
+            </tr>
+          </table>
+          <hr>
+
+
         <div id="rodape">
             <p> Nós representamos o grupo 3 no Programa Itaú Tech para deficientes</p>
             <p> @ Grupo 3 - Itau/Gama Academy</p>
