cor padrao do contato.html

--- a/sobre.html
+++ b/sobre.html
@@ -32,8 +32,8 @@
                 Formado em Tecnologia e Midias Digitais da PUC-SP e atuo assistente TI responsável pelo controle de inventario de equipamentos e mobile.</p></td>
             </tr>
             <tr>
-              <td><p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkdlen</a></b></p></td>
-              <td><p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkdlen</a></b></p></td>
+              <td><p><b><a href="https://www.linkedin.com/in/caroline-costa-2114a284/" target="_blank">Linkedln</a></b></p></td>
+              <td><p><b><a href="https://www.linkedin.com/in/felipe-lima-de-oliveira-153374115/" target="_blank">Linkedln</a></b></p></td>
             </tr>
             <td>-</td>
             <td>-</td>
@@ -50,8 +50,8 @@
                 Formado gestão de Recurso Humano, atuando no Banco Itaú com operações de Consignado, realizando e analisando o atendimento das agências e das empresas conveniadas.</p></td>
             </tr>
             <tr>
-              <td><p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkdlen</a></b></p></p></td>
-              <td><p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkdlen</a></b></p></td>
+              <td><p><b><a href="https://www.linkedin.com/mwlite/in/flavio-judice-b85a51a4" target="_blank">Linkedln</a></b></p></p></td>
+              <td><p><b><a href="https://www.linkedin.com/in/patrick-roberto-gaspar-a872176b" target="_blank">Linkedln</a></b></p></td>
             </tr>
           </table>
           <hr>
